lab2 HW added: - picture; - icon; - meta; - title;

--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="robots" content="selection">
+    <meta name="keywords" content="cat, road, art">
+    <meta name="description" content=" Art of cat on the road">
+    <meta name="autor" content="unknown">
+
+    <title>HW Website</title>
+    <link rel="shortcut icon" href="./img/cat.jpg" type="image/x-icon">
 </head>
+
 <body>
     <h1>Hello World!</h1>
+    <img src="./img/cat.jpg" alt="cat">
 </body>
 </html>
