First update of the personalPage

--- a/HW 3/pages/cv.html
+++ b/HW 3/pages/cv.html
@@ -16,7 +16,8 @@
     <div class="NameTitle">
     <h1>Kristiyan Daskalov</h1>
     <h2>Marketing Specialist</h2>
-    <img src="../images/theway.jpg" alt="do you know the way" width="100">
+    <a href="https://imgflip.com/gif/25njl6"><img src="../images/theway.jpg" alt="do you know the way" width="100"></a>
+    
     </div>
     
     <!-- CONTACTS -->
