--- a/HW 3/pages/personalPage.html
+++ b/HW 3/pages/personalPage.html
@@ -12,16 +12,58 @@
     <link rel="shortcut icon" href="../images/theway.jpg" type="image/x-icon">
 </head>
 <body>
-    
+    <h1>The personal page of Kris</h1>
+    <!-- ABOUT ME  -->
+    <div class="aboutme">
+        <h1>About me</h1>
+        <div>
+            <h2>Education</h2>
+            <p>
+                <ul>
+               <li><strong>By University: </strong>Business Studies; International Strategic Marketing; Digital Marketing</li>
+               <li><strong>By Courses: </strong>Windows System Administration; QA Manual</li>
+                </ul>
+            </p>
+        </div>
+        <div>
+            <h2>Hobbies</h2>
+            <ol>
+                <li>Watching football matches <del>often</del></li>
+                <li>Platying PC games <sup>&#40;more like wishing to have the time to play&#41;</sup></li>
+                <li>Learning new things <i>tech</i></li>
+                <li>Going to music gigs</li>
+                <li><i>And planning to try a new hobby this year - Airsoft</i></li>
+            </ol>
+        </div>
+        <div>
+            <h2>Pet</h2>
+            <h3>The cat called <i>Miso</i></h3>
+            <h4>AKA: The beast, Miso NE, Wild baby hog, Miso Soup</h4>
+            <p>
+                <i>Miso story starts from Varna when she was found in the street dumpster and then moved to capital of Bulgaria.</i> <br>
+                Her favorite toy is a soft mouse which she loves to chase and return to us.            
+            </p>
+        </div>
+    </div>
+    <!-- EXPECTATIONS OF THE COURSE -->
+    <div class="expectations">
+        <h1>Expectations</h1>
+        <p>To create a good foundation for advanced FE fevelopment.</p>
+    </div>
+
+    <!-- COURSE PROJECT -->
+    <div class="courseProject">
+        <h1>Course Project</h1>
+        <p>I'm aiming to work on a website that can be used by real business. For example a website for beauty studio which offers few types of courses.</p>
+    </div>
+
+    <!-- Защо записах курса към ProgressBG -->
+
+    <div class="whyProgress">
+        <h1>Why I chose Progress?</h1>
+        <p>Because of the flexiblity - lectures are available in person & online. Plus the fact that it's worked in small groups.
+        </p>
+    </div>
+
 </body>
 </html>
-
-
-<!-- За мен (тук бихте могли да сложите отделни под-секции, например:)
-образование
-интереси/хоби
-домашни любимци
-и каквото още ви хрумне
-Какво очаквам от курса по HTML/CSS/JS
-Какъв курсов проект бих желал/а да мога да реализирам до края на курса.
-Защо записах курса към ProgressBG (или: откъде разбрах за курса) -->
