--- a/pages/cv.html
+++ b/pages/cv.html
@@ -53,6 +53,9 @@
       <h2>Work Experience</h2>
       <div class="job1">
         <h3>Sales And Marketing Specialist at Herbalife</h3>
+        <a href="https://www.herbalife.bg/" style="text-decoration: none"
+          >Herbalife website</a
+        >
         <p><em>Mar 2019 - Present</em></p>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit.
