--- a/pages/personalPage.html
+++ b/pages/personalPage.html
@@ -65,5 +65,15 @@
         </p>
     </div>
 
+    <!-- Pets Section -->
+    <div class="petSection">
+        <h1>Pets Section</h1>
+        <a href="https://en.wikipedia.org/wiki/Cat"><img src="../images/personalPage/cats.PNG" alt="cats" width="300"></a> <br>
+        <a href="https://en.wikipedia.org/wiki/Dog"><img src="../images/personalPage/dogs.PNG" alt="cats" width="300"></a> <br>
+        <a href="https://en.wikipedia.org/wiki/Cattle"><img src="../images/personalPage/cows.PNG" alt="cats" width="300"></a> <br>
+        <a href="https://en.wikipedia.org/wiki/Magpie"><img src="../images/personalPage/magpies.PNG" alt="cats" width="300"></a> <br>
+        <a href="https://en.wikipedia.org/wiki/Crow"><img src="../images/personalPage/crows.PNG" alt="cats" width="300"></a>
+    </div>
+
 </body>
 </html>
