--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -5,14 +6,19 @@
     <title>List of completed tasks</title>
   </head>
   <body>
-    <a href="/pages/cv.html">CV</a> <br />
-    <a href="/pages/personalPage.html">Personal Page</a> <br />
-    <a href="/pages/selectedCodepens.html">Selected Codepens</a> <br />
-    <a href="/pages/1_Ordered_and_Unordered_lists.html"
-      >Ordered and Unordered lists</a
-    >
-    <br />
-    <a href="/pages/2_Nested_lists_food.html">Nested lists food</a><br />
-    <a href="/pages/3_Nested_list_music.html">Nested list music</a>
+    <ol>
+      <li><a href="/pages/cv.html">CV</a></li>
+      <li><a href="/pages/personalPage.html">Personal Page</a></li>
+      <li><a href="/pages/selectedCodepens.html">Selected Codepens</a></li>
+      <li>
+        <a href="/pages/1_Ordered_and_Unordered_lists.html"
+          >Ordered and Unordered lists</a
+        >
+      </li>
+      <li><a href="/pages/2_Nested_lists_food.html">Nested lists food</a></li>
+      <li><a href="/pages/3_Nested_list_music.html">Nested list music</a></li>
+      <li><a href="/pages/Slot_Machine.html">Slot Machine</a></li>
+      <li><a href="/pages/FIFA_Table.html">FIFA Table</a></li>
+    </ol>
   </body>
 </html>
