--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       <li><a href="./pages/3_Nested_list_music.html">Nested list music</a></li>
       <li><a href="./pages/Slot_Machine.html">Slot Machine</a></li>
       <li><a href="./pages/FIFA_Table.html">FIFA Table</a></li>
+      <li>
+        <a href="./pages/simpleFormControls.html">Simple Form Controls</a>
+      </li>
     </ol>
   </body>
 </html>
