--- a/pages/simpleFormControls.html
+++ b/pages/simpleFormControls.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <fieldset>
-      <form action="#">
+      <!-- http://127.0.0.1:5502/cgi-bin/registration.py -->
+      <form action="#" method="GET">
         <h1>Регистрация</h1>
         <fieldset>
           <legend>Лични данни</legend>
