--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li>
         <a href="./pages/simpleFormControls.html">Simple Form Controls</a>
       </li>
+      <li><a href="./pages/The_Crow.html">The Crow - by Edgar Allan Poe</a></li>
     </ol>
   </body>
 </html>
