--- a/pages/The_Crow.html
+++ b/pages/The_Crow.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>The Crow</title>
-    <link rel="stylesheet" href="/thecrow.css" />
+    <link rel="stylesheet" href="thecrow.css" />
   </head>
   <body>
     <div class="all">
