--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="./pages/simpleFormControls.html">Simple Form Controls</a>
       </li>
       <li><a href="./pages/The_Crow.html">The Crow - by Edgar Allan Poe</a></li>
-      <li><a href="./pages/floatingImages.html"></a></li>
+      <li><a href="./pages/floatingImages.html">Floating Images</a></li>
     </ol>
   </body>
 </html>
