--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       </li>
       <li><a href="./pages/The_Crow.html">The Crow - by Edgar Allan Poe</a></li>
       <li><a href="./pages/floatingImages.html">Floating Images</a></li>
+      <li><a href="./pages/oldSchoolMenu.html">Old School Menu</a></li>
     </ol>
   </body>
 </html>
